Fixed mobile CSS for about page
Added single picture of Goku and Teddy for screens below 1024px. Added monospace font for about me paragraphs. Added another font but doesn't look good for paragraphs so might use in another heading

--- a/src/css/about.sass
+++ b/src/css/about.sass
@@ -1,11 +1,73 @@
 @use './vars.sass' as *
 
-.grid-container
-  grid-template-columns: 2% 1fr 1% 1fr 1fr 2%
-  grid-template-rows: 50px 100vh 500px 400px 400px 110px
-  gap: 0 0
-  grid-template-areas: ". . . . . ."". content-1 content-1 content-1 content-1 .""footer footer footer footer footer footer"
-  .content-1
-    grid-area: content-1
-  .footer
-    grid-area: footer
+@font-face
+	font-family: software
+	src: url('./fonts/software-tester-7.regular.ttf') format('truetype')
+@font-face 
+	font-family: Fredericka the Great
+	src: url('./fonts/FrederickatheGreat-Regular.ttf') format('truetype')
+
+.grid-container-a
+	height: 100%
+	width: 100%
+	display: grid
+	grid-template-columns: 2% 1fr 1fr 1fr 1fr 2%
+	grid-template-rows: 50px 250px 80vh 110px
+	gap: 20px 5px
+	grid-template-areas: ". . . . . ."". picture-1a content-1a content-1a picture-2a ."". about-div about-div about-div about-div .""footer footer footer footer footer footer"
+	.content-1a
+		grid-area: content-1a
+		position: relative
+		margin: auto
+		top: 50px
+		max-height: 300px
+		font-family: Fredericka the Great
+		font-size: 3em
+	.picture-1a
+		grid-area: picture-1a
+	.picture-2a
+		grid-area: picture-2a
+	.footer
+		grid-area: footer
+	.about-div
+		grid-area: about-div
+		text-align: center
+
+.picture-1a, .picture-2a
+	text-align: center
+	img
+		border-radius: 50%
+		object-fit: cover
+		width: auto
+		max-height: 100%
+
+.picture-3a
+	display: none
+
+.about-p
+	font-family: software
+	font-size: 2em
+	font-weight: bold
+
+@media screen and ( max-width: 1023px )
+	.grid-container-a
+		grid-template-columns: 20px 1fr 1fr 1fr 1fr 20px
+		grid-template-rows: 200px 250px 80vh 110px
+		gap: 20px 5px
+		grid-template-areas: ". content-1a content-1a content-1a content-1a ."". picture-3a picture-3a picture-3a picture-3a ."". about-div about-div about-div about-div .""footer footer footer footer footer footer"
+	.content-1a
+		top: 0
+		h1
+			margin-top: 0
+			font-size: 1.2em
+	.picture-1a, .picture-2a
+		display: none
+	.picture-3a
+		text-align: center
+		display: block
+		grid-area: picture-3a
+	img
+		border-radius: 5%
+		object-fit: cover
+		width: auto
+		max-height: 100%
